# mcp-pfsense

./: .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/mcp_pfsense/: __init__.py  client.py  config.py  server.py
src/mcp_pfsense/tools/: __init__.py  dhcp.py  dns.py  firewall.py  monitoring.py  system.py
tests/: conftest.py  sample_data.py  test_config.py  test_dhcp.py  test_dns.py  test_firewall.py  test_monitoring.py  test_system.py
