[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-pfsense"
version = "0.1.1"
description = "MCP server for managing pfSense firewalls through AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Antonio Mello", email = "antonio.mello@felhen.com.br" },
]
keywords = ["mcp", "pfsense", "firewall", "ai", "llm", "server", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "build",
    "twine",
]

[project.scripts]
mcp-pfsense = "mcp_pfsense.server:main"

[project.urls]
Homepage = "https://github.com/antonio-mello-ai/mcp-pfsense"
Repository = "https://github.com/antonio-mello-ai/mcp-pfsense"
Issues = "https://github.com/antonio-mello-ai/mcp-pfsense/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
